--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 .container {
   max-width: 1000px;
   margin: 0 auto;
-  padding: 20px;
+  padding: 10px 20px;
 }
 
 .current-level {
@@ -45,6 +45,18 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.square-border {
+  border: 1px dashed black;
+}
+
+.hard {
+  cursor: none;
+}
+
+.very-hard {
+  background: white;
 }
 
 /*# sourceMappingURL=style.css.map */
