--- a/css/style.scss
+++ b/css/style.scss
@@ -28,25 +28,6 @@
   border: 2px solid black;
 }
 
-.red {
-  background: #ff6450;
-}
-
-.green {
-  background: #85ff4f;
-}
-
-.white {
-  background: white;
-}
-
-.blue {
-  background: #008aff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
 .square-border {
   border: 1px dashed black;
 }
@@ -58,3 +39,16 @@
 .very-hard {
   background: white;
 }
+
+.blue {
+  background: #008aff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.red { background: #ff6450; }
+
+.green { background: #85ff4f; }
+
+.white { background: white; }
